feat: add margin sunday 13/03/2023 01/21

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
     <div class="bayan">
-        <h2 class="name">You can't just copy and past CSS<span>+</span></h2>
+        <input type="radio" name="mem">
+        <label class="name">
+            You can't just copy and past CSS<span>+</span>
+        </label>
         
         <div class="content">
             <img src="./img/mem1.jpg" alt="mem1">
